<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pazzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pazzle"
            android:textSize="30sp"
            app:backgroundTint="@color/blue_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rank"
            android:textSize="30sp"
            app:backgroundTint="@color/orange_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_statistics"
            android:textSize="30sp"
            app:backgroundTint="@color/bluegray_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_registered_name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_current_pname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/label_no_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_name_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name_config"
            android:textSize="18sp"
            app:backgroundTint="@color/pink_500" />
    </LinearLayout>
</LinearLayout>