<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_player_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/label_player_id"
            android:textAlignment="viewEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_player_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/label_registered_name"
            android:textAlignment="viewEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_player_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_playdatetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/label_created_dt"
            android:textAlignment="viewEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_playdatetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

<!--        <Button-->
<!--            android:id="@+id/btn_edit_player"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/label_edit"-->
<!--            android:textSize="20sp"-->
<!--            app:backgroundTint="@color/green_500" />-->

        <Button
            android:id="@+id/btn_select_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select"
            android:textSize="20sp"
            app:backgroundTint="@color/blue_500" />
    </LinearLayout>

</LinearLayout>